--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/drigberg/nerdata#readme",
   "dependencies": {
-    "lodash": "4.17.11"
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
@@ -34,7 +34,7 @@
     "@types/sinon": "5.0.7",
     "chai": "4.2.0",
     "joi": "14.3.0",
-    "mocha": "5.2.0",
+    "mocha": "^8.2.1",
     "sinon": "7.1.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
